@@ -87,6 +87,12 @@ port = 8443
 ; use ssl - This option controls if SSL will be enabled.
 use ssl = true
 
+; url prefix - set prefix to provided urls
+url prefix = /
+
+; modules dir - set folder with yaml module definitions
+modules dir = ${shared-path}/exporter_modules
+
 
 [/settings/NRPE/server]
 ; insecure - Skip all ssl verifications
